--- a/vulnerable-application/Dockerfile
+++ b/vulnerable-application/Dockerfile
@@ -1,10 +1,14 @@
 FROM node:lts-alpine
 ENV NODE_ENV=production
-WORKDIR /usr/src/app
+WORKDIR /app
 COPY ["package.json", "package-lock.json*", "./"]
-RUN npm install --production --silent && mv node_modules ../
+
+RUN npm i -g npm@9.1.1 && \
+    npm i --production --silent && \
+    find /app/node_modules/ ! -user root | xargs chown root:root && \
+    mv node_modules ../
 COPY . .
 EXPOSE 3000
-RUN chown -R node /usr/src/app
+RUN chown -R node /app
 USER node
 CMD ["npm", "start"]
