--- a/vulnerable-application/package.json
+++ b/vulnerable-application/package.json
@@ -13,6 +13,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.0.5",
     "express-session": "^1.17.3",
+    "morgan": "^1.10.0",
     "sqlite3": "^5.1.6"
   }
 }
