--- a/vulnerable-application/package.json
+++ b/vulnerable-application/package.json
@@ -1,14 +1,11 @@
 {
   "name": "vulnerable-application",
-  "version": "1.0.0",
-  "description": "",
+  "private": "true",
   "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.0.5",
