--- a/vulnerable-application/package.json
+++ b/vulnerable-application/package.json
@@ -4,13 +4,15 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.0.5",
     "express-session": "^1.17.3",
     "morgan": "^1.10.0",
+    "nodemon": "^2.0.22",
     "sqlite3": "^5.1.6"
   }
 }
